samples/_failures_safe/1761322382_af71c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24a3311e.c: In function ‘process_log_file’:
./samples/SAFE/__tmp_24a3311e.c:152:16: error: expected identifier or ‘(’ at end of input
  152 |         struct Log
      |                ^~~
./samples/SAFE/__tmp_24a3311e.c:152:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_24a3311e.c:152:16: error: expected declaration or statement at end of input
